Bug 258159 - The HTMLPreloadScanner should not preload scripts with unsupported types
Summary: The HTMLPreloadScanner should not preload scripts with unsupported types
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
: 258158 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-06-15 14:11 PDT by Chris Dumez
Modified: 2023-06-16 09:47 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-06-15 14:11:26 PDT
The HTMLPreloadScanner should not preload scripts with unsupported types.
Comment 1 Chris Dumez 2023-06-15 14:11:46 PDT
*** Bug 258158 has been marked as a duplicate of this bug. ***
Comment 2 Chris Dumez 2023-06-15 14:13:33 PDT
Pull request: https://github.com/WebKit/WebKit/pull/15019
Comment 3 EWS 2023-06-16 09:46:24 PDT
Committed 265247@main (57c8f39eb66b): <https://commits.webkit.org/265247@main>

Reviewed commits have been landed. Closing PR #15019 and removing active labels.
Comment 4 Radar WebKit Bug Importer 2023-06-16 09:47:16 PDT
<rdar://problem/110905029>