The HTMLPreloadScanner should not preload scripts with unsupported types https://bugs.webkit.org/show_bug.cgi?id=258159

Reviewed by Darin Adler and Ryosuke Niwa.

The HTMLPreloadScanner should not preload scripts with unsupported types
to avoid wasting resources unnecessarily.

This aligns our behavior with Chrome and Firefox.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/html/syntax/speculative-parsing/generated/document-write/script-src-unsupported-type.tentative.sub-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/syntax/speculative-parsing/generated/page-load/script-src-unsupported-type.tentative-expected.txt:
* Source/WebCore/html/parser/HTMLPreloadScanner.cpp:
(WebCore::TokenPreloadScanner::StartTagScanner::processAttribute):
(WebCore::TokenPreloadScanner::StartTagScanner::shouldPreload):

Canonical link: https://commits.webkit.org/265247@main