Source/WebCore/html/parser/HTMLPreloadScanner.cpp
@@ -42,6 +42,7 @@
 #include "MediaQueryEvaluator.h"
 #include "MediaQueryParser.h"
 #include "RenderView.h"
+#include "ScriptElement.h"
 #include "SecurityPolicy.h"
 #include "Settings.h"
 #include "SizesAttributeParser.h"
@@ -153,14 +154,23 @@ public:
         if (!type)
             return nullptr;
 
-        if (!LinkLoader::isSupportedType(type.value(), m_typeAttribute, m_document))
+        if (m_tagId == TagId::Link && !LinkLoader::isSupportedType(type.value(), m_typeAttribute, m_document))
             return nullptr;
 
         // Do not preload if lazyload is possible but metadata fetch is disabled.
         if (HTMLImageElement::hasLazyLoadableAttributeValue(m_lazyloadAttribute))
             return nullptr;
 
-        auto request = makeUnique<PreloadRequest>(initiatorFor(m_tagId), m_urlToLoad, predictedBaseURL, type.value(), m_mediaAttribute, m_scriptType, m_referrerPolicy, m_fetchPriorityHint);
+        std::optional<ScriptType> scriptType;
+        if (m_tagId == TagId::Script) {
+            scriptType = ScriptElement::determineScriptType(m_typeAttribute, m_languageAttribute);
+            if (!scriptType)
+                return nullptr;
+            if (scriptType != ScriptType::Module && m_scriptIsNomodule)
+                return nullptr;
+        }
+
+        auto request = makeUnique<PreloadRequest>(initiatorFor(m_tagId), m_urlToLoad, predictedBaseURL, type.value(), m_mediaAttribute, scriptType.value_or(ScriptType::Classic), m_referrerPolicy, m_fetchPriorityHint);
         request->setCrossOriginMode(m_crossOriginMode);
         request->setNonce(m_nonceAttribute);
         request->setScriptIsAsync(m_scriptIsAsync);
@@ -248,10 +258,10 @@ private:
             break;
         case TagId::Script:
             if (match(attributeName, typeAttr)) {
-                if (equalLettersIgnoringASCIICase(attributeValue, "module"_s))
-                    m_scriptType = ScriptType::Module;
-                else if (equalLettersIgnoringASCIICase(attributeValue, "importmap"_s))
-                    m_scriptType = ScriptType::ImportMap;
+                m_typeAttribute = attributeValue.toString();
+                break;
+            } else if (match(attributeName, languageAttr)) {
+                m_languageAttribute = attributeValue.toString();
                 break;
             } else if (match(attributeName, nonceAttr)) {
                 m_nonceAttribute = attributeValue.toString();
@@ -387,9 +397,6 @@ private:
         if (m_tagId == TagId::Input && !m_inputIsImage)
             return false;
 
-        if (m_tagId == TagId::Script && m_scriptType != ScriptType::Module && m_scriptIsNomodule)
-            return false;
-
         return true;
     }
 
@@ -409,6 +416,7 @@ private:
     String m_metaContent;
     String m_asAttribute;
     String m_typeAttribute;
+    String m_languageAttribute;
     String m_lazyloadAttribute;
     bool m_metaIsViewport;
     bool m_metaIsDisabledAdaptations;
@@ -416,7 +424,6 @@ private:
     bool m_scriptIsNomodule { false };
     bool m_scriptIsAsync { false };
     float m_deviceScaleFactor;
-    ScriptType m_scriptType { ScriptType::Classic };
     ReferrerPolicy m_referrerPolicy { ReferrerPolicy::EmptyString };
     RequestPriority m_fetchPriorityHint { RequestPriority::Auto };
 };
